--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -1,3 +1,7 @@
+/* Font import */
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@800&display=swap');
+
+
 .logo {
 
     opacity: 100%;
@@ -15,24 +19,28 @@
 
 }
 
+strong {
+    animation: spin;
+    animation-duration: 9s;
+    font-family: 'Big Shoulders Stencil Display', cursive;
+    font-size: 1.3em;
+    color: #66C8FF;
+    letter-spacing: .1em;
+    position: relative;
+    top: .2em;
+    left: .4em;
+}
+
 #nav-center {
-    padding-left: 3.7em;
+    font-size: 1.2em;
+    position: relative;
+    left: -70px;
 }
 
- /* button hide on desktop, visible on phones/tablets */
-@media screen and (min-width: 768px) {
-    #searchButton {
-        display: none;
+@media screen and (max-width: 991px){
+    #nav-center {
+        left: 0;
     }
-}
-
-@media screen and (max-width: 768px) {
-    #searchButton {
-        display: initial;
-        margin-top: .5em;
-        width: 100%;
-    }
-
 }
 
 /* keyframes/animations for .logo class */
