--- a/frontend/src/css/frontpage.css
+++ b/frontend/src/css/frontpage.css
@@ -1,23 +1,10 @@
-.test {
-    background-color: lightcoral;
-    text-align: center;
-    margin: 0 auto;
+#container {
+    margin-top: 40px;
+    margin-bottom: 60px;
 }
 
-.test2 {
-    background-color: lightsalmon;
-    text-align: center;
-    margin: 0 auto;
-}
-
-.test3 {
-    background-color: lightskyblue;
-    text-align: center;
-    margin: 0 auto;
-}
-
-.test4 {
-    background-color: lightgreen;
-    text-align: center;
-    margin: 0 auto;
+@media screen and (max-width: 767px){
+    .test2 {
+        margin-bottom: 40px;
+    }
 }
