--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -9,7 +9,7 @@
     text-decoration: none;
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 767px) and (max-height: 600px){
     #footer-container {
         position: sticky;
         bottom: auto;
