--- a/frontend/src/css/frontpage.css
+++ b/frontend/src/css/frontpage.css
@@ -1,10 +1,18 @@
 #container {
-    margin-top: 40px;
+    margin-top: 35px;
     margin-bottom: 60px;
 }
 
+
+/* Media Queries */
 @media screen and (max-width: 767px){
     .test2 {
         margin-bottom: 40px;
+    }
+}
+
+@media screen and (min-width: 1600px){
+    #container {
+        margin-top: 110px;
     }
 }
