--- a/frontend/src/css/frontpage.css
+++ b/frontend/src/css/frontpage.css
@@ -3,16 +3,13 @@
     margin-bottom: 60px;
 }
 
-
-/* Media Queries */
-@media screen and (max-width: 767px){
-    .test2 {
-        margin-bottom: 40px;
-    }
+#img {
+    animation-name: loadToFade;
+    animation-duration: 3s;
 }
 
-@media screen and (min-width: 1600px){
-    #container {
-        margin-top: 110px;
-    }
+
+@keyframes loadToFade {
+    0% {opacity: 40%;}
+    100% {opacity: 100%;}
 }
