--- a/frontend/src/css/tips.css
+++ b/frontend/src/css/tips.css
@@ -1,16 +1,15 @@
-#tips-image, #tips-image2 {
+#image, #image2 {
     box-shadow: 7px 7px 10px .5px #242424;
-    transition: transform .5s;
+    transition: transform .7s;
     border-radius: 0;
 }
 
-#tips-image:hover {
-    opacity: 50%;
+#image:hover {
+    opacity: 70%;
     transform: rotate(3deg) scale(1.05);
 }
 
-#tips-image2:hover {
-    opacity: 50%;
+#image2:hover {
+    opacity: 70%;
     transform: rotate(-3deg) scale(1.05);
-    content: "hei";
 }
