--- a/frontend/src/css/header.css
+++ b/frontend/src/css/header.css
@@ -1,6 +1,9 @@
 /* Font import */
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@800&display=swap');
 
+#nav-dropdown {
+    color:white
+}
 
 .logo {
 
@@ -24,7 +27,7 @@ strong {
     animation-duration: 9s;
     font-family: 'Big Shoulders Stencil Display', cursive;
     font-size: 1.3em;
-    color: #66C8FF;
+    color: #FFF;
     letter-spacing: .1em;
     position: relative;
     top: .2em;
@@ -32,7 +35,7 @@ strong {
 }
 
 #navbar {
-    box-shadow: 0px 0px 10px #dadada;
+    /* box-shadow: 0px 0px 10px #dadada; */
 }
 
 #nav-center {
